# CIARC

./: .cookiecutter.json  .dockerignore  .env.example  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  404.html  CONTRIBUTING.md  Dockerfile  Dockerfile.mkdocs  LICENSE  Makefile  README.md  ciarc.py  console.py  docker-compose.yml  docker-compose.yml.traefik  docs-requirements.txt  forward-melvonaut-api.sh  gui.py  index.html  init-letsencrypt.sh  letsencrypt-config.sh  mkdocs.yml  nginx.conf  noxfile.py  objects.inv  pyproject.toml  sitemap.xml  ssh-forward-melvonaut-api.sh  ssh-git-pull-on-melvin.sh  ssh-start-melvonaut.sh  ssh-start-melvonaut.ssh  start-melvonaut.sh
.github/workflows/: main.yml
changelog/: index.html
coverage/: class_index.html  covindex.html  function_index.html  index.html  status.json  z_98093a27b7e7f29c___init___py.html  z_98093a27b7e7f29c_constants_py.html  z_98093a27b7e7f29c_models_py.html  z_bf78f395a0cb3c0d___init___py.html  z_bf78f395a0cb3c0d___main___py.html  z_bf78f395a0cb3c0d_api_py.html  z_bf78f395a0cb3c0d_ebt_calc_py.html  z_bf78f395a0cb3c0d_mel_telemetry_py.html  z_bf78f395a0cb3c0d_settings_py.html  z_bf78f395a0cb3c0d_state_planer_py.html  z_bf78f395a0cb3c0d_utils_py.html  z_ff367dc9633b8124___init___py.html  z_ff367dc9633b8124___main___py.html  z_ff367dc9633b8124_ciarc_api_py.html  z_ff367dc9633b8124_image_helper_py.html  z_ff367dc9633b8124_image_processing_py.html  z_ff367dc9633b8124_melvin_api_py.html  z_ff367dc9633b8124_rift_console_py.html
docs/: conf.py  index.md  melvonaut.md  reference.md  rift_console.md  shared.md  usage.md
license/: index.html
logs/melvonaut/: .gitignore
media/: CIARC.drawio
melvonaut/: index.html
rift_console/: index.html
search/: search_index.json
shared/: index.html
src/melvonaut/: __main__.py  api.py  constants.py  ebt_calc.py  loop_config.py  mel_telemetry.py  persistent_settings.py  settings.py  start.sh  state_planer.py  utils.py
src/rift_console/: RiftTelemetry.py  __init__.py  __main__.py  ciarc_api.py  drsApi.py  image_helper.py  image_processing.py  melvin_api.py  rift_console.py  rift_telemetry.py  useapi.py
src/rift_console/templates/: console.html  downloads.html  ebt.html  live.html  main.html  media.html  stitched.html
src/shared/: constants.py  melvin.py  models.py
ssh-scripts/: ssh-restart-melvin-container.sh  ssh-restart-melvonaut.sh  ssh-stop-melvonaut.sh
tests/test_melvonaut/: __init__.py  conftest.py  test_api.py  test_main.py  test_models.py  test_settings.py  test_state_planer.py
tests/test_rift_console/: test_main.py
